.metadata/.plugins/org.eclipse.cdt.ui/Assignment4.build.log
12:51:34 **** Incremental Build of configuration Debug for project Assignment4 ****
make all 
Building file: ../src/Assignment4.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Assignment4.d" -MT"src/Assignment4.d" -o "src/Assignment4.o" "../src/Assignment4.cpp"
../src/Assignment4.cpp:23:13: error: expected unqualified-id before ‘)’ token
 class Graph(){
             ^
make: *** [src/Assignment4.o] Error 1

12:51:34 Build Finished (took 214ms)

